Added Auth as an extra

--- a/src/OT.Assessment.App/appsettings.json
+++ b/src/OT.Assessment.App/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DatabaseConnection": "SERVER=FLUFFY; DATABASE=OT_Assessment_DB; Integrated Security=SSPI; TrustServerCertificate=True;"
+    "DatabaseConnection": "SERVER=FLUFFY; DATABASE=OT_Assessment_DB; Integrated Security=SSPI;; TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "RxBw0PONkxTbVH655D1/+SJdUAnG0m+ESzseXVJ7Beg=",//Usualy I wouldnt put this directly here and use envorment variables or a secret manager but for the sake of simplicity we will use this here
+    "Issuer": "OT_Assessment",
+    "Audience": "OT_Assessment",
+    "ExpireMinutes": 60
   }
 }
