Final Extra additions

--- a/src/OT.Assessment.Consumer/appsettings.json
+++ b/src/OT.Assessment.Consumer/appsettings.json
@@ -7,6 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DatabaseConnection": "SERVER=FLUFFY; DATABASE=OT_Assessment_DB; Integrated Security=SSPI; TrustServerCertificate=True;"
+    "DatabaseConnection": "SERVER=.; DATABASE=OT_Assessment_DB; Integrated Security=SSPI; TrustServerCertificate=True;"
+  },
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Username": "guest",
+    "Password": "guest"
   }
 }
